Se edita página de about

--- a/about.html
+++ b/about.html
@@ -14,6 +14,9 @@
         </nav>
     </header>
     <main class="presentacion">
+        <section class="imagen">
+            <img src="./img/Monkey.jpeg" alt="Imagen del que hizo esta página" class="imagen__contenido" title="Aquí estaba dibujando un perrito 🐶">
+        </section>  
         <section class="presentacion__contenido">
             <h2 class="presentacion__contenido__titulo">Acerca de mí</h2>
             <p class="presentacion__contenido__texto">Mi nombre es <span>Miguel Figueroa</span> 🧑‍💻. Soy originario de <span>México</span> 🇲🇽 y tengo <span>33 años</span>. Me encanta aprender nuevas tecnologías y compartir mis conocimientos con la comunidad.</p>
@@ -28,7 +31,6 @@
             </div>
         </section>
     </main>
-    
 
     <footer>
         <p>¡Gracias por visitar la página de mi proyecto! 👨‍💻</p>
