--- a/dia2.html
+++ b/dia2.html
@@ -16,7 +16,7 @@
             </div>
             <div class="navegacion__enlaces">
                 <a href="./index.html" class="navegacion__enlaces_a">Inicio</a>
-                <a href="./about.css" class="navegacion__enlaces_a">Acerca de mí</a>
+                <a href="./about.html" class="navegacion__enlaces_a">Acerca de mí</a>
             </div>
         </nav>
     </header>
