Se termina estilo página about

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
             <img src="./img/Monkey.jpeg" alt="Imagen del que hizo esta página" class="imagen__contenido" title="Aquí estaba dibujando un perrito 🐶">
         </section>  
         <section class="presentacion__contenido">
-            <h2 class="presentacion__contenido__titulo">Acerca de mí</h2>
+            <h2 class="presentacion__contenido__titulo">Acerca de Mí</h2>
             <p class="presentacion__contenido__texto">Mi nombre es <span>Miguel Figueroa</span> 🧑‍💻. Soy originario de <span>México</span> 🇲🇽 y tengo <span>33 años</span>. Me encanta aprender nuevas tecnologías y compartir mis conocimientos con la comunidad.</p>
             <p class="presentacion__contenido__texto">Actualmente, soy parte del programa <span>ONE de Alura Latam</span> 🚀, un programa increíble que me ha permitido desarrollar mis habilidades de programación. Estoy muy contento de poder mostrar los resultados de lo que he aprendido y continuar creciendo en el mundo del desarrollo web 🌐.</p>
             <p class="presentacion__contenido__texto">Fuera de la programación, soy una persona sencilla y me gusta disfrutar de las cosas simples de la vida. Soy fan de los <span>Simpsons</span> 🍩. También me encanta ver <span>fútbol</span> ⚽. Y además, tengo tres perritos🐶🐶🐶, que son parte fundamental de mi vida. Ellos siempre me alegran el día.</p>
@@ -26,8 +26,8 @@
             <h3>¡Hablemos! 💬</h3>
             <p class="presentacion__contenido__texto">Si tienes alguna duda sobre mis proyectos o si te gustaría que colaboráramos en algo, no dudes en contactarme a través de mis redes sociales. ¡Me encantaría conectar contigo! 🌟</p>
             <div class="redes__botones">
-                <a href="https://www.linkedin.com/in/miguelims" class="redes__enlace">LinkedIn <i class="fa-brands fa-linkedin"></i></a>
-                <a href="https://github.com/MiguelFigueroa02" class="redes__enlace">GitHub <i class="fa-brands fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/miguelims" id="redes__Link">LinkedIn <span><i class="fa-brands fa-linkedin"></i></span></a>
+                <a href="https://github.com/MiguelFigueroa02" id="redes__Git">GitHub <span><i class="fa-brands fa-github"></i></span></a>
             </div>
         </section>
     </main>
