--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
             <a href="./dia7.html" class="dias__enlace">Día 7</a>
         </div>
         <section class="redes">
-            <p class="redes__descripcion">Gracias por visitar mi proyecto. 🌐 Si te gustaría estar más conectado, no dudes en seguirme en mis redes sociales. ¡Conectemos y compartamos juntos nuestras experiencias! 🤝</p>
+            <p class="redes__descripcion">Gracias por visitar mi proyecto. 🌐 Puedes conocer un poco más sobre mí en el siguiente enlace: </p>
             <div class="redes__botones">
-                <a href="https://www.linkedin.com/in/miguelims" class="redes__enlace">LinkedIn <i class="fa-brands fa-linkedin"></i></a>
-                <a href="https://github.com/MiguelFigueroa02" class="redes__enlace">GitHub <i class="fa-brands fa-github"></i></a>
+                <a href="./about.html" class="redes__enlace">Acerca de mí</i></a>
             </div>
         </section>
     </main>
