Se añade estilo al día 3

--- a/dia2.html
+++ b/dia2.html
@@ -67,7 +67,7 @@
             <p class="optional__mensaje"></p>
         </section>
         <section class="aplicacion">
-            <p>🔍 Esto te permitirá entender cómo JavaScript maneja las comparaciones entre <strong>números y cadenas de texto</strong> y cómo los operadores <code>==</code> y <code>===</code> pueden generar diferentes resultados. ¡Pruébalo y experimenta con distintos valores! 🚀</p>
+            <p>¡Pruébalo y experimenta con distintos valores! 🚀</p>
 
             <p>Consulta la lógica de ejecución en javascript en el siguiente enlace:</p>
             <div class="repositorio_caja">
