Se modifica estilo día 4

--- a/dia4.html
+++ b/dia4.html
@@ -15,19 +15,18 @@
                 <h2 class="navegacion__logo__titulo">Día 4</h2>
             </div>
             <div class="navegacion__enlaces">
-                <a href="./index.html" class="navegacion__enlaces_a">Inicio</a>
-                <a href="./about.html" class="navegacion__enlaces_a">Acerca de mí</a>
+                <a href="./index.html" class="navegacion__enlaces_a">INICIO</a>
+                <a href="./about.html" class="navegacion__enlaces_a">ACERCA DE MÍ</a>
             </div>
         </nav>
     </header>
     <main class="principal">
         <section class="aplicacion">
-            <p></p>
+            <p>¡Día de juego! Hoy me lancé a crear un pequeño juego en el que el usuario debe adivinar un número secreto. Con `while`, el programa sigue pidiendo intentos hasta que el jugador acierte. Además, agregué un `if` para dar pistas, indicando si el número es mayor o menor. No voy a mentir, después de probarlo varias veces, terminé jugando contra mi propia creación. Te invito a probarlo en los dos modos de juego en que lo cargué</p>
     
             <h2>📌 Pasos para ejecutar la aplicación:</h2>
-            <p>¡Día de juego! Hoy me lancé a crear un pequeño juego en el que el usuario debe adivinar un número secreto. Con `while`, el programa sigue pidiendo intentos hasta que el jugador acierte. Además, agregué un `if` para dar pistas, indicando si el número es mayor o menor. No voy a mentir, después de probarlo varias veces, terminé jugando contra mi propia creación. Te invito a probarlo en los dos modos de juego en que lo cargué</p>
             <ul>
-                <li>1️⃣ Da click en el botón <span>¡Vamos a intentarlo!</span></li>
+                <li>1️⃣ Da click en el botón <span>¡START!</span></li>
                 <li>2️⃣ Indica el modo de juego con el que quisieras intentar adivinar el número secreto😁</li>
                 <li>3️⃣ Si elegiste el método mediante el ciclo For, basta con ingresar de manera manual las veces necesarias el número secreto antes de superar los 3 intentos. No te asustes, pero el sistema te irá desplengando ventanas para guiarte durante todo el proceso 🤖👍</li>
                 <li>4️⃣ Si elegiste utilizar botones, basta con seleccionar el botón del número que sospechas que es el número secreto y guiarte con los mensajes que se te desplegarán en la ventana 😊💻</li>
@@ -37,7 +36,7 @@
         </section>
         <section class="modos">
             <div class="resultado">
-                <button class="resultado__iniciar" onclick="numeroAzar();">¡Vamos a intentarlo!</button>
+                <button class="resultado__iniciar" onclick="numeroAzar();">¡START!</button>
                 <p class="resultado__parrafo"></p>
             </div>
             <div class="eleccionJuego hidden" id="contenedorBotonesJuego">
@@ -81,7 +80,7 @@
 
             <p>Consulta la lógica de ejecución en javascript en el siguiente enlace:</p>
             <div class="repositorio_caja">
-                <a href="https://github.com/MiguelFigueroa02/7DaysOfCode/blob/main/day4/day4.js" id="enlace_respositorio">Explora el código en GitHub <i class="fa-solid fa-code"></i></a>
+                <a href="https://github.com/MiguelFigueroa02/7DaysOfCode/blob/main/day4/day4.js" id="enlace_respositorio">EXPLORA EL CÓDIGO EN GITHUB <i class="fa-solid fa-code"></i></a>
             </div>   
         </section>
     </main>
