--- a/dia7.html
+++ b/dia7.html
@@ -40,26 +40,36 @@
             <div id="display">
                 <p id="pantalla"></p>
             </div>
-            <div class="calculadora">
-                <button class="number" onclick="imprimirNumero('cero');" id="cero">0</button>
-                <button class="number" onclick="imprimirNumero('uno');" id="uno">1</button>
-                <button class="number" onclick="imprimirNumero('dos');" id="dos">2</button>
-                <button class="number" onclick="imprimirNumero('tres');" id="tres">3</button>
-                <button class="number" onclick="imprimirNumero('cuatro');" id="cuatro">4</button>
-                <button class="number" onclick="imprimirNumero('cinco');" id="cinco">5</button>
-                <button class="number" onclick="imprimirNumero('seis');" id="seis">6</button>
-                <button class="number" onclick="imprimirNumero('siete');" id="siete">7</button>
-                <button class="number" onclick="imprimirNumero('ocho');" id="ocho">8</button>
-                <button class="number" onclick="imprimirNumero('nueve');" id="nueve">9</button>
-                <button class="number" onclick="imprimirNumero('decimal');" id="decimal">.</button>
-                <button class="aritmetica" onclick="calcular('suma')" id="suma">+</button>
-                <button class="aritmetica" onclick="calcular('resta')" id="resta">-</button>
-                <button class="aritmetica" onclick="calcular('multiplicacion')" id="multiplicacion">*</button>
-                <button class="aritmetica" onclick="calcular('division')" id="division">/</button>
-                <button class="aritmetica" onclick="igual();" id="igualdad">=</button>
-                <button class="aritmetica" onclick="reinicio();"id="reinicio">AC</button>
+            <div class="boton_operacion">
+                    <button class="aritmetica" onclick="calcular('suma')" id="suma">+</button>
+                    <button class="aritmetica" onclick="calcular('resta')" id="resta">-</button>
+                    <button class="aritmetica" onclick="calcular('multiplicacion')" id="multiplicacion">*</button>
+                    <button class="aritmetica" onclick="calcular('division')" id="division">/</button>
             </div>
-            <a href="./index.html">Volver</a>
+            <div class="calculadora__content">
+                <div class="numeros">
+                    <div class="enteros">
+                        <button class="number entero__content" onclick="imprimirNumero('siete');" id="siete">7</button>
+                        <button class="number entero__content" onclick="imprimirNumero('ocho');" id="ocho">8</button>
+                        <button class="number entero__content" onclick="imprimirNumero('nueve');" id="nueve">9</button>
+                        <button class="number entero__content" onclick="imprimirNumero('cuatro');" id="cuatro">4</button>
+                        <button class="number entero__content" onclick="imprimirNumero('cinco');" id="cinco">5</button>
+                        <button class="number entero__content" onclick="imprimirNumero('seis');" id="seis">6</button>
+                        <button class="number entero__content" onclick="imprimirNumero('uno');" id="uno">1</button>
+                        <button class="number entero__content" onclick="imprimirNumero('dos');" id="dos">2</button>
+                        <button class="number entero__content" onclick="imprimirNumero('tres');" id="tres">3</button>
+                    </div>
+                    <div class="cero__decimal">
+                        <button class="number" onclick="imprimirNumero('cero');" id="cero">0</button>
+                        <button class="number" onclick="imprimirNumero('decimal');" id="decimal">.</button>
+                    </div>
+                </div>
+                <div class="operadores">
+                    <button class="aritmetica" onclick="reinicio();"id="reinicio">AC</button>
+                    <button class="aritmetica" onclick="igual();" id="igualdad">=</button>
+                </div>
+            </div>
+            <!-- <a href="./index.html">Volver</a> -->
         </section>
         <!-- <section class="descripción">
             
