Se añaden cambios

--- a/dia5y6.html
+++ b/dia5y6.html
@@ -63,8 +63,10 @@
             <dialog id="ingreso">
                 <form action="" class="ingreso__forma">
                     <label for="" class="ingreso__forma__label">¿Deseas agregar un alimento a tu lista de compras?</label>
-                    <button type="button" class="ingreso__forma__boton" onclick="seleccionUsuario('Sí');">Sí</button>
-                    <button type="button" class="ingreso__forma__boton" onclick="seleccionUsuario('No');">No</button>
+                    <div class="ingreso__forma__botones">
+                        <button type="button" class="ingreso__forma__boton" onclick="seleccionUsuario('Sí');">Sí</button>
+                        <button type="button" class="ingreso__forma__boton" onclick="seleccionUsuario('No');">No</button>
+                    </div>
                 </form>
             </dialog>
             <!-- <form class="informacionAlimento">
